--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.NeoExplorer" parent="Theme.Material3.DayNight">
+<resources>
+    <style name="Theme.NeoExplorer" parent="Theme.Material3.DayNight.DarkActionBar">
         <item name="colorPrimary">#FF6200EE</item>
         <item name="colorPrimaryDark">#FF3700B3</item>
         <item name="colorAccent">#FFBB86FC</item>
