--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <resources>
-    <style name="Theme.NeoExplorer" parent="Theme.Material3.DayNight">
+    <style name="Theme.NeoExplorer" parent="Theme.AppCompat.DayNight">
         <item name="android:windowBackground">@android:color/black</item>
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 </resources>
