--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@android:color/black">
 
+    <!-- A toolbar at the top -->
     <TextView
         android:id="@+id/titleText"
         android:layout_width="match_parent"
@@ -16,6 +18,7 @@
         android:background="@android:color/black"
         android:textColor="#FF6200EE" />
 
+    <!-- The list that will show files and folders -->
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
