--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.NeoExplorer" parent="Theme.Material3.DayNight.DarkActionBar">
-        <!-- Customize your theme here. -->
+<resources>
+    <style name="Theme.NeoExplorer" parent="Theme.AppCompat.DayNight">
         <item name="colorPrimary">#FF6200EE</item>
         <item name="colorPrimaryDark">#FF3700B3</item>
         <item name="colorAccent">#FFBB86FC</item>
-        
-        <!-- Status bar and navigation bar colors -->
-        <item name="android:statusBarColor">@android:color/black</item>
-        <item name="android:navigationBarColor">@android:color/black</item>
-        
-        <!-- Window background -->
         <item name="android:windowBackground">@android:color/black</item>
     </style>
 </resources>
